--- a/Frontend/src/components/login/login.module.css
+++ b/Frontend/src/components/login/login.module.css
@@ -1,6 +1,6 @@
 .loginContainer {
   min-height: 100vh;
-  background-color: #e9e7e7;
+  margin-top: 20px;
 }
 
 .leftImage {
@@ -20,6 +20,7 @@
 .logo {
   width: 80px;
   height: 80px;
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
@@ -29,7 +30,7 @@
   padding: 1.75rem;
   width: 100%;
   max-width: 360px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
 }
 
 .input {
