Updated user interface, enhanced degree management features, and fixed minor issues

--- a/Frontend/src/components/forgotpassword/forgotpassword.module.css
+++ b/Frontend/src/components/forgotpassword/forgotpassword.module.css
@@ -1,6 +1,6 @@
 .loginContainer {
   min-height: 100vh;
-  background-color: #e9e7e7;
+  margin-top: 20px;
 }
 
 .leftImage {
@@ -20,6 +20,7 @@
 .logo {
   width: 80px;
   height: 80px;
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
@@ -29,7 +30,7 @@
   padding: 1.75rem;
   width: 100%;
   max-width: 360px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
 }
 
 .input {
@@ -60,15 +61,6 @@
   text-decoration: underline;
 }
 
-/* Mặc định: ảnh nền hiển thị bình thường */
-.leftImage {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-}
-
-/* Mobile: ảnh nền bị làm mờ và phủ lớp trắng */
 @media (max-width: 767.98px) {
   .loginContainer {
     position: relative;
@@ -94,12 +86,4 @@
   .leftImage {
     display: none;
   }
-}
-
-/* Kiểu dáng cho spinner */
-.spinner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
 }
